<resources>
    <string name="app_name">Marvel Movies</string>
    <string name="title_activity_main">Main</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_view_dr_estranho">Dr Estranho</string>
    <string name="text_view_capita_marvel">Capita Marvel</string>
    <string name="text_view_hulk">Hulk</string>
    <string name="text_view_homem_de_ferro">Homem de Ferro</string>
    <string name="text_view_home_aranha">Homem_aranha</string>
    <string name="text_view_homem_formiga">Homem Formiga</string>
    <string name="text_view_thor">Thor</string>
</resources>